@@ -10,11 +10,16 @@
 		<provides>video</provides>
 	</extension>
 	<extension point="xbmc.addon.metadata">
-		<language>en de</language>
-		<platform>all</platform>
 		<summary lang="de">Telekom Entertain</summary>
 		<summary lang="en">Telekom Entertain</summary>
 		<description lang="de">Zugriff auf alle öffentlich rechtlichen Sender über Entertain Anschlüsse der Deutschen Telekom.</description>
 		<description lang="en">Access to all public TV channels available on Deutsche Telekom's triple play connections.</description>
+		<platform>all</platform>
+		<language>en de</language>
+		<license>GNU GENERAL PUBLIC LICENSE. Version 2, June 1991</license>
+		<forum></forum>
+		<website></website>
+		<source>https://github.com/tuxpoldo/entertain-xbmc.git</source>
+		<email></email>
 	</extension>
 </addon>
