@@ -1,6 +1,7 @@
 0.0.2
 - Fixed wrong repository structure (Closes #1)
 - Fixed invalid XML in settings.xml (Closes #2)
+- Added missing tags to addon.xml (Closes #3)
 
 0.0.1
 - Initial version
